--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-router-dom": "^6.15.0",
     "react-router-native": "^6.15.0"
   },
   "devDependencies": {
